--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -24,6 +24,7 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "prisma": "^6.17.1"
+    "prisma": "^6.17.1",
+    "nodemailer": "^7.0.10"
   }
 }
