--- a/src/backend/package.json
+++ b/src/backend/package.json
@@ -19,12 +19,12 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "i": "^0.3.7",
-    "nodemon": "^3.1.10",
+    "nodemailer": "^7.0.10",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "prisma": "^6.17.1",
-    "nodemailer": "^7.0.10"
+    "nodemon": "^3.1.10"
   }
 }
